--- a/DenseNet/DenseNet-from-scratch.ipynb
+++ b/DenseNet/DenseNet-from-scratch.ipynb
@@ -7,16 +7,9 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import torch.optim as optim\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torchvision import datasets, transforms\n",
-    "from torchvision.utils import make_grid\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from collections import OrderedDict"
+    "import torch.nn as nn # All neural network modules, nn.Linear, nn.Conv2d, BatchNorm, Loss functions\n",
+    "import torch.nn.functional as F # All functions that don't have any parameters\n",
+    "from collections import OrderedDict # For saving the model"
    ]
   },
   {
