--- a/ResNet/ResNet-from-scratch.ipynb
+++ b/ResNet/ResNet-from-scratch.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import torch\n",
-    "import torch.nn as nn\n",
-    "from torchvision import datasets\n",
-    "from torchvision import transforms\n",
-    "from torch.utils.data.sampler import SubsetRandomSampler\n",
+    "import torch.nn as nn # All neural network modules, nn.Linear, nn.Conv2d, BatchNorm, Loss functions\n",
+    "from torchvision import datasets # Has standard datasets we can import in a nice way\n",
+    "from torchvision import transforms # Transformations we can perform on our dataset\n",
+    "from torch.utils.data.sampler import SubsetRandomSampler # Sampling the dataset\n",
     "\n",
+    "# Check if CUDA is available\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
